package ocr3

import (
	"context"

	"github.com/hashicorp/go-plugin"
	"google.golang.org/grpc"

	"github.com/smartcontractkit/chainlink-common/pkg/loop"
	"github.com/smartcontractkit/chainlink-common/pkg/loop/internal/core/services/reportingplugin/ocr3"
	"github.com/smartcontractkit/chainlink-common/pkg/loop/internal/core/services/telemetry"
	"github.com/smartcontractkit/chainlink-common/pkg/loop/internal/net"
	"github.com/smartcontractkit/chainlink-common/pkg/loop/reportingplugins"
	"github.com/smartcontractkit/chainlink-common/pkg/services"
	"github.com/smartcontractkit/chainlink-common/pkg/types"
	"github.com/smartcontractkit/chainlink-common/pkg/types/core"
)

const PluginServiceName = "ocr3-plugin-service"

type ProviderServer[T types.PluginProvider] interface {
	core.OCR3ReportingPluginServer[T]
	ConnToProvider(conn grpc.ClientConnInterface, broker net.Broker, brokerConfig loop.BrokerConfig) T
}

type GRPCService[T types.PluginProvider] struct {
	plugin.NetRPCUnsupportedPlugin

	loop.BrokerConfig

	PluginServer ProviderServer[T]

	pluginClient *ocr3.ReportingPluginServiceClient
}

type serverAdapter struct {
	NewReportingPluginFactoryFn func(
		context.Context,
		core.ReportingPluginServiceConfig,
		grpc.ClientConnInterface,
		core.PipelineRunnerService,
		core.TelemetryService,
		core.ErrorLog,
		core.CapabilitiesRegistry,
		core.KeyValueStore,
		core.RelayerSet,
	) (core.OCR3ReportingPluginFactory, error)

	ValidateConfigService
}

type ValidateConfigService interface {
	services.Service
	NewValidationService(ctx context.Context) (core.ValidationService, error)
}

func (s serverAdapter) NewValidationService(ctx context.Context) (core.ValidationService, error) {
	return s.ValidateConfigService.NewValidationService(ctx)
}

func (s serverAdapter) NewReportingPluginFactory(
	ctx context.Context,
	config core.ReportingPluginServiceConfig,
	conn grpc.ClientConnInterface,
	pr core.PipelineRunnerService,
	ts core.TelemetryService,
	errorLog core.ErrorLog,
	capRegistry core.CapabilitiesRegistry,
	kv core.KeyValueStore,
	rs core.RelayerSet,
) (core.OCR3ReportingPluginFactory, error) {
	return s.NewReportingPluginFactoryFn(ctx, config, conn, pr, ts, errorLog, capRegistry, kv, rs)
}

func (g *GRPCService[T]) GRPCServer(broker *plugin.GRPCBroker, server *grpc.Server) error {
	newReportingPluginFactoryFn := func(
		ctx context.Context,
		cfg core.ReportingPluginServiceConfig,
		conn grpc.ClientConnInterface,
		pr core.PipelineRunnerService,
		ts core.TelemetryService,
		el core.ErrorLog,
		capRegistry core.CapabilitiesRegistry,
		kv core.KeyValueStore,
		rs core.RelayerSet,
	) (core.OCR3ReportingPluginFactory, error) {
		provider := g.PluginServer.ConnToProvider(conn, broker, g.BrokerConfig)
		tc := telemetry.NewTelemetryClient(ts)
		return g.PluginServer.NewReportingPluginFactory(ctx, cfg, provider, pr, tc, el, capRegistry, kv, rs)
	}

	return ocr3.RegisterReportingPluginServiceServer(server, broker, g.BrokerConfig, serverAdapter{
		NewReportingPluginFactoryFn: newReportingPluginFactoryFn,
		ValidateConfigService:       g.PluginServer,
	})
}

func (g *GRPCService[T]) GRPCClient(_ context.Context, broker *plugin.GRPCBroker, conn *grpc.ClientConn) (interface{}, error) {
	if g.pluginClient == nil {
		g.pluginClient = ocr3.NewReportingPluginServiceClient(g.BrokerConfig)
	}
	g.pluginClient.Refresh(broker, conn)

	return core.OCR3ReportingPluginClient(g.pluginClient), nil
}

func (g *GRPCService[T]) ClientConfig() *plugin.ClientConfig {
	c := &plugin.ClientConfig{
		HandshakeConfig: reportingplugins.ReportingPluginHandshakeConfig(),
		Plugins:         map[string]plugin.Plugin{reportingplugins.PluginServiceName: g},
	}
	if g.pluginClient == nil {
		g.pluginClient = ocr3.NewReportingPluginServiceClient(g.BrokerConfig)
	}
	return loop.ManagedGRPCClientConfig(c, g.pluginClient.BrokerConfig)
}
